--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 
-{% block title %}Logi Page{% endblock %}
+{% block title %}Login Page{% endblock %}
 
 {% block main %}
 <section id="login" class="login">
