--- a/templates/main.html
+++ b/templates/main.html
@@ -71,7 +71,7 @@
     {% endblock %}
     <dialog id=main>
         <section>
-            <header id="dlg_header" aria-label="dialog header">
+            <header class="dlg_header" aria-label="dialog header">
                 <h2></h2>
                 <button class="dialog_close" type="button">x</button>
             </header>
