More style refinement stylesheet.

--- a/templates/styleguide.html
+++ b/templates/styleguide.html
@@ -5,7 +5,7 @@
     {% for e in events %}
     <li data-date="{{e.date}}">
         <div class="card">
-            <p class="title">{{e.title}}</p>
+            <h2>{{e.title}}</h2>
             <p class="personelle">
                 <span class="label">Presenter</span> {{e.presenter}} &nbsp; &mdash; &nbsp;
                 <span class="label">Service Leader</span> {{e.contact}}
