--- a/static/styles.css
+++ b/static/styles.css
@@ -117,9 +117,24 @@ ul.eventlist .personelle .label {
     color: var(--grey);
 }
 
+ul.eventlist .card {
+    padding: 0.2em 0.5em 0.5em;
+    margin: 0.5em;
+}
+
 .eventlist li::marker {
     content: attr(data-date) " ";
     font-size: larger;
+}
+
+ul.eventlist .card h2 {
+    margin: 0;
+    padding: 0;
+    color: var(--brandprimarydark);
+}
+
+ul.eventlist .card p.personelle {
+    margin: 0;
 }
 
 .eventsongs {
